--- a/styles/style.css
+++ b/styles/style.css
@@ -319,7 +319,26 @@ margin-bottom: 20px;
 
 div.recording
 {
-	margin: 0 0 20px 0;
+	margin: 0 0 40px 0;
+}
+
+div.recording > iframe
+{
+	display: block;
+	margin: auto;
+}
+
+div.recording > p.title
+{
+	font-size: 15px;
+	font-weight: bold;
+	color: #00544D;
+}
+
+div.recording > p.performers
+{
+	font-weight: bold;
+	color: #00544D;
 }
 
 div.recording > p
